kubernetes/platform/ingress/observastack-gateway-https-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observastack-gateway-https
  namespace: observastack
  labels:
    app.kubernetes.io/name: observastack-gateway
    app.kubernetes.io/part-of: observastack
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:579871530627:certificate/REPLACE_ME
    alb.ingress.kubernetes.io/tags: Project=observastack,Environment=production,ManagedBy=GitOps
spec:
  ingressClassName: alb
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observastack-gateway
                port:
                  number: 8080
